# DataONE_Operations

./: .envrc  .gitignore  README.md  README.rst  d1nodeprops.md  pyproject.toml  setup.cfg  setup.py
checks/: README.md  fabfile.py  run-speedcheck  speedtest-cli
checks/local/: check_hazelcast_membership  check_mk_speedcheck  check_ssh_passwords_disabled  check_ufw  check_unattended_upgrades
cn_dependencies/: cn_dependencies.html  readme.md  show_cn_dependencies
d1_admin_tools/: __init__.py  d1_config.py  d1_node_properties.py  d1_nodes.py  dataone_response.py  operations.py  solrclient.py
d1_admin_tools/views/: d1pidinfo.txt
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/CN/: diagnosticapi.rst  index.rst  letsencrypt.rst  readonly.rst  searchui.rst
doc/source/MN/: index.rst
doc/source/PROJ/: communications.rst  index.rst  issuetracking.rst  metrics.rst  vmsetup.rst
doc/source/_static/: local-style.css
operations/: Makefile
operations/source/: index.rst
scripts/: d1archive  d1auditreplicas.py  d1cert  d1cnprocessingstate  d1delete  d1diff.py  d1dns  d1elasticinfo.py  d1facets  d1fields  d1getpids  d1getsysmeta  d1hosts  d1indexqstat  d1listobjects  d1logdigest  d1logintoken  d1metrics  d1mnadmin  d1nodeprops  d1nodereport  d1nodes  d1oretest  d1pid  d1pidinfo  d1ppids  d1resolve  d1sysmeta  d1update_rightsholder.py  d1updaterightsholder  d1url  d1url.py  d1verifytoken  update_rightsholder.py  urlx
source/: conf.py
src/: README.mb
tools/d1_admin/: readme.rst
ui/nodeproperties/: config.py
(+11 files in other folders)
